--- a/PRG272_Project.csproj
+++ b/PRG272_Project.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Activities" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -46,8 +47,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BusinessLogic_Layer\Logic.cs" />
-    <Compile Include="DataAccess_Layer\Access_Students.cs" />
+    <Compile Include="BusinessLogic_Layer\FileDataAccess.cs" />
+    <Compile Include="BusinessLogic_Layer\IStudentData.cs" />
+    <Compile Include="BusinessLogic_Layer\Manager.cs" />
+    <Compile Include="DataAccess_Layer\Students.cs" />
     <Compile Include="Presentation_Layer\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -56,6 +59,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Presentation_Layer\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
